--- a/config.json
+++ b/config.json
@@ -1,41 +1,26 @@
 {
-  "public": {
-    "default": {
-      "commerce-core-endpoint": "https://www.aemshop.net/graphql",
-      "commerce-endpoint": "https://www.aemshop.net/cs-graphql",
-      "headers": {
-        "all": {
-          "Store": "default"
-        },
-        "cs": {
-          "Magento-Customer-Group": "b6589fc6ab0dc82cf12099d1c2d40ab994e8410c",
-          "Magento-Store-Code": "main_website_store",
-          "Magento-Store-View-Code": "default",
-          "Magento-Website-Code": "base",
-          "x-api-key": "4dfa19c9fe6f4cccade55cc5b3da94f7",
-          "Magento-Environment-Id": "f38a0de0-764b-41fa-bd2c-5bc2f3c7b39a"
+ "public": {
+   "default": {
+   "commerce-core-endpoint": "https://www.aemshop.net/graphql",
+   "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/QD1T4hbz1zGxLHYpp8cyPy/graphql",
+   "headers": {
+      "cs": {
+         "ac-view-id": "b2cdc85b-7004-494c-a3bd-6c55e5533e4c",
+         "ac-price-book-id": "east_coast_inc",
+         "ac-source-locale": "en-US"
         }
       },
       "analytics": {
-        "base-currency-code": "USD",
-        "environment": "Testing",
-        "environment-id": "f38a0de0-764b-41fa-bd2c-5bc2f3c7b39a",
-        "store-code": "main_website_store",
-        "store-id": 1,
-        "store-name": "Main Website Store",
-        "store-url": "https://www.aemshop.net",
-        "store-view-code": "default",
-        "store-view-id": 1,
-        "store-view-name": "Default Store View",
-        "website-code": "base",
-        "website-id": 1,
-        "website-name": "Main Website"
-      },
-      "plugins": {
-        "picker": {
-           "rootCategory": "2"
-         }
-      }
+         "base-currency-code": "USD",
+         "environment": "Production",
+         "store-id": 1,
+         "store-name": "ACO Demo",
+         "store-url": "https://www.aemshop.net",
+         "store-view-id": 1,
+         "store-view-name": "Default Store View",
+         "website-id": 1,
+         "website-name": "Main Website"
+       }
     }
-  }
+   }
 }
