--- a/config.json
+++ b/config.json
@@ -1,26 +1,39 @@
 {
- "public": {
-   "default": {
-   "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/graphql",
-   "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/QD1T4hbz1zGxLHYpp8cyPy/graphql",
-   "headers": {
-      "cs": {
-         "ac-view-id": "b2cdc85b-7004-494c-a3bd-6c55e5533e4c",
-         "ac-price-book-id": "east_coast_in",
-         "ac-source-locale": "en-US"
+  "public": {
+    "default": {
+      "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/QD1T4hbz1zGxLHYpp8cyPy/graphql",
+      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/QD1T4hbz1zGxLHYpp8cyPy/graphql",
+      "headers": {
+        "all": {
+          "Store": "default"
+        },
+        "cs": {
+          "AC-View-ID": "YOUR_HEADER_VALUE",
+          "AC-Price-Book-ID": "YOUR_HEADER_VALUE",
+          "AC-Source-Locale": "YOUR_HEADER_VALUE"
         }
       },
+      "commerce-assets-enabled": false,
       "analytics": {
-         "base-currency-code": "USD",
-         "environment": "Production",
-         "store-id": 1,
-         "store-name": "ACO Demo",
-         "store-url": "https://www.aemshop.net",
-         "store-view-id": 1,
-         "store-view-name": "Default Store View",
-         "website-id": 1,
-         "website-name": "Main Website"
-       }
+        "base-currency-code": "USD",
+        "environment": "Testing",
+        "environment-id": "QD1T4hbz1zGxLHYpp8cyPy",
+        "store-code": "YOUR_STORE_CODE",
+        "store-id": "YOUR_STORE_ID",
+        "store-name": "YOUR_STORE_NAME",
+        "store-url": "YOUR_STORE_URL",
+        "store-view-code": "YOUR_STORE_VIEW_CODE",
+        "store-view-id": "YOUR_STORE_VIEW_ID",
+        "store-view-name": "YOUR_STORE_VIEW_NAME",
+        "website-code": "YOUR_WEBSITE_CODE",
+        "website-id": "YOUR_WEBSITE_ID",
+        "website-name": "YOUR_WEBSITE_NAME"
+      },
+      "plugins": {
+        "picker": {
+          "rootCategory": "2"
+        }
+      }
     }
-   }
+  }
 }
